--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^1.3.4",
+    "d3": "^7.8.5",
     "echarts": "^5.4.1",
+    "echarts-wordcloud": "^2.1.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
