--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ZWK-b",
+  "name": "eco+ai",
   "version": "0.0.1",
-  "description": "zhj de nb",
-  "productName": "zwkのb",
+  "description": "eco+ai",
+  "productName": "eco+ai",
   "author": "zhj",
   "private": true,
   "scripts": {
